# llvm-project

./: .gitignore  README.md  a.out  demo.cpp  demo.ll  demo_.mlir  demo_n.bc  input.mlir  input_arith.mlir  input_toy.ll  out_vec.mlir  toy.bc  toy.ll  toy.s  toy_copy.ll  toy_new.bc  toy_new_16.bc  toy_opt.ll  toy_opt_16.ll
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/our_pass/: CMakeLists.txt  our_pass.cpp
mlir/examples/toy/Ch7/: CMakeLists.txt  demo.toy  demo1.toy  toyc.cpp
mlir/examples/toy/Ch7/include/: CMakeLists.txt
mlir/examples/toy/Ch7/include/Poseidon/: CMakeLists.txt  Passes.h  PoseidonDialect.h  PoseidonDialect.td  PoseidonOps.h  PoseidonOps.td
mlir/examples/toy/Ch7/include/toy/: Ops.td
mlir/examples/toy/Ch7/lib/Dialect/: CMakeLists.txt
mlir/examples/toy/Ch7/lib/Dialect/Poseidon/: CMakeLists.txt  PoseidonDialect.cpp
mlir/examples/toy/Ch7/mlir/: LowerLinalgToAffine.cpp  LowerToAffineLoops.cpp  LowerToLinalg.cpp  LowerToPos_LLVM.cpp  LowerToPoseidon.cpp  LowerToPoseidonLoops.cpp  PoseidonDialect.cpp  PoseidonOps.cpp  PrintPass.cpp
mlir/lib/Dialect/Affine/IR/: AffineOps.cpp
mlir/lib/Dialect/Affine/Transforms/: SuperVectorize.cpp
standalone/: .gitignore  CMakeLists.txt  README.md
standalone/examples/: add.mlir
standalone/include/Standalone/: StandaloneDialect.td  StandaloneOps.td  StandalonePasses.h
standalone/lib/Standalone/: CMakeLists.txt  StandaloneDialect.cpp  StandaloneOps.cpp
standalone/lib/Standalone/Conversion/StandaloneToArith/: ConvertStandaloneToArith.cpp  ConvertStandaloneToArith.h
standalone/standalone-opt/: standalone-opt.cpp
standalone/test/Standalone/: dummy_add.mlir
